# rapier-runtime

./: .gitignore  README.md  SECURITY.md  pyproject.toml
docs/: STATUS.md  mcp-server-scope.md  threat-model.md
manifests/: echo.yaml  sparring.frame.yaml  sparring.full.yaml  sparring.proposer.yaml  sparring.spar.yaml
site/: README.md  coming-soon.html  index.html
src/rapier/: __init__.py  _json.py  cli.py  convergence.py  envelope.py  ledger.py  manifest.py  models.py  onboarding.py  pipeline.py  presets.py  secrets.py  stage.py
src/rapier/mcp/: __init__.py  server.py  tools.py
src/rapier/stages/: __init__.py  echo.py  frame.py  reconcile.py
src/rapier/stages/proposer/: __init__.py  phase_stages.py  phases.py
src/rapier/stages/resolver/: __init__.py  _binding.py  _extract.py  anchored_fix.py  author.py  citation_gate.py  compose.py  cross_review.py  definitiveness_gate.py
src/rapier/verify/: __init__.py  _bootstrap.py  _llm_shim.py  service.py
src/rapier/verify/_vendor/: PROVENANCE.md  cite_check.py  lib_llm.py  spar_cross_review.py  spar_definitiveness_gate.py  spar_verify_gate.py  verify_grounding.py
tests/: test_cli.py  test_convergence.py  test_envelope.py  test_extract_json.py  test_frame_stage.py  test_full_ceremony.py  test_manifest.py  test_mcp.py  test_models_vendors.py  test_onboarding.py  test_persistence_default.py  test_pipeline.py  test_policy.py  test_proposer_g2.py  test_proposer_stages.py  test_reconcile.py  test_resolver_stages.py  test_secrets.py  test_vendor_policy_v4.py  test_verify_service.py
