[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapier-runtime"
version = "0.0.1"
description = "A code-orchestrated engine that runs the SPARRING method: grounded, cross-vendor adversarial review for AI-in-the-loop decisions."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Bart Niedner" }]
keywords = [
    "llm",
    "adversarial-review",
    "ai-governance",
    "anti-sycophancy",
    "sparring",
    "decision-support",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
# Runtime deps are deliberately tiny: every vendor (Anthropic/OpenAI/Gemini/Grok/
# any OpenAI-compatible endpoint) goes over the wire through `requests` — no
# provider SDKs are imported — and manifests are `pyyaml`.
dependencies = ["pyyaml>=6.0", "requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rapier = "rapier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rapier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
